--- a/lab-12-inference-smoking.Rmd
+++ b/lab-12-inference-smoking.Rmd
@@ -2,20 +2,24 @@
 title: "Lab 12 - Smoking during pregnacy"
 subtitle: "Simulation based inference"
 output: 
-  tufte::tufte_html:
-    tufte_variant: "envisioned"
-    highlight: pygments
-    css: ../lab.css
-  tufte::tufte_handout:
+  pdf_document:
     latex_engine: xelatex
-    highlight: pygments
-    keep_tex: true
+    toc:true
+    number_sections:true
+    fig_caption:true
     citation_package: natbib
+    keep_tex:true
 link-citations: true
 ---
 
-```{r include=FALSE}
-knitr::opts_chunk$set(eval = FALSE)
+```{r include = FALSE}
+knitr::opts_chunk$set(
+  eval = TRUE,
+  out.width = "80%",
+  fig.asp = 0.618,
+  fig.width = 10,
+  dpi = 300
+)
 ```
 
 In 2004, the state of North Carolina released a large data set containing information on births recorded in this state.
