Adds skimr library for enhanced data exploration
Incorporates the skimr library to facilitate better data summarization and exploration capabilities.

This addition will improve the analysis process by providing a more comprehensive overview of the data's structure and summary statistics.

--- a/lab-12-inference-smoking.Rmd
+++ b/lab-12-inference-smoking.Rmd
@@ -55,6 +55,7 @@ You can load them by running the following in your Console:
 library(tidyverse) 
 library(tidymodels)
 library(openintro)
+library(skimr)
 ```
 
 ## Data
