--- a/lab-12-inference-smoking.Rmd
+++ b/lab-12-inference-smoking.Rmd
@@ -82,6 +82,13 @@ set.seed(12345)
 
 1.  What are the cases in this data set? How many cases are there in our sample?
 
+```{r exercise-1}
+# Explore the dataset
+head(ncbirths)
+dim(ncbirths)
+glimpse(ncbirths)
+```
+
 The first step in the analysis of a new dataset is getting acquainted with the data.
 Make summaries of the variables in your dataset, determine which variables are categorical and which are numerical.
 For numerical variables, are there outliers?
