Adds summary counts for smoking habits and maturity
Implements summary statistics by counting occurrences of smoking habits and maturity levels in the dataset.

These additions enhance data insights and facilitate further analysis of the impact of these factors on birth outcomes.

--- a/lab-12-inference-smoking.Rmd
+++ b/lab-12-inference-smoking.Rmd
@@ -109,6 +109,12 @@ ncbirths %>%
   ) +
   theme_minimal()
 
+# Summary by categorical variables
+ncbirths %>%
+  count(habit)
+
+ncbirths %>%
+  count(mature)
 ```
 ## Baby weights
 
