Adds mean weight calculation for babies of white mothers
Implements a new exercise to filter data for white mothers and calculate the mean weight of their babies.

This addition enhances the analysis by providing specific insights into the weight data associated with this demographic, contributing to a more comprehensive understanding of the dataset.

--- a/lab-12-inference-smoking.Rmd
+++ b/lab-12-inference-smoking.Rmd
@@ -131,6 +131,18 @@ Since the research question doesn't state a direction for the change, we use a t
 3.  Create a filtered data frame called `ncbirths_white` that contain data only from white mothers.
     Then, calculate the mean of the weights of their babies.
 
+```{r exercise-3}
+# Filter for white mothers
+ncbirths_white <- ncbirths %>%
+  filter(whitemom == "white")
+
+# Calculate mean weight
+mean_weight_white <- ncbirths_white %>%
+  summarise(mean_weight = mean(weight)) %>%
+  pull(mean_weight)
+
+mean_weight_white
+```
 4.  Are the conditions necessary for conducting simulation based inference satisfied?
     Explain your reasoning.
 
