--- a/lab-12-inference-smoking.Rmd
+++ b/lab-12-inference-smoking.Rmd
@@ -174,6 +174,15 @@ In order to do so, we
 
 5.  Run the appropriate hypothesis test, visualize the null distribution, calculate the p-value, and interpret the results in context of the data and the hypothesis test.
 
+```{r exercise-5}
+# Conduct hypothesis test
+null_dist_weight <- ncbirths_white %>%
+  specify(response = weight) %>%
+  hypothesize(null = "point", mu = 7.43) %>%
+  generate(reps = 5000, type = "bootstrap") %>%
+  calculate(stat = "mean")
+
+```
 ## Baby weight vs. smoking
 
 Consider the possible relationship between a mother's smoking habit and the weight of her baby.
