Adds boxplot visualization for baby weight by smoking habit
Implements a boxplot to visualize the relationship between a mother's smoking habit and baby weight.

This addition enhances data analysis by providing a clear graphical representation, facilitating better insights into the impact of smoking on baby weight.

--- a/lab-12-inference-smoking.Rmd
+++ b/lab-12-inference-smoking.Rmd
@@ -195,6 +195,17 @@ Plotting the data is a useful first step because it helps us quickly visualize t
 6.  Make side-by-side boxplots displaying the relationship between `habit` and `weight`.
     What does the plot highlight about the relationship between these two variables?
 
+```{r exercise-6}
+ncbirths %>%
+  ggplot(aes(x = habit, y = weight)) +
+  geom_boxplot(fill = "steelblue", alpha = 0.7) +
+  labs(
+    title = "Baby Weight by Mother's Smoking Habit",
+    x = "Mother's Smoking Habit",
+    y = "Baby Weight (pounds)"
+  ) +
+  theme_minimal()
+```
 7.  Before moving forward, save a version of the dataset omitting observations where there are NAs for `habit`.
     You can call this version `ncbirths_habitgiven`.
 
