--- a/lab-12-inference-smoking.Rmd
+++ b/lab-12-inference-smoking.Rmd
@@ -231,6 +231,17 @@ In order to answer this question we will conduct a hypothesis test .
 - H_A: There is a difference in average baby weight based on mother's smoking habit (μ_nonsmoking ≠ μ_smoking)
 
 7.  Write the hypotheses for testing if the average weights of babies born to smoking and non-smoking mothers are different.
+```{r exercise-7-observed-diff}
+# Calculate observed difference in means
+observed_diff <- ncbirths_habitgiven %>%
+  group_by(habit) %>%
+  summarise(mean_weight = mean(weight), .groups = "drop") %>%
+  pivot_wider(names_from = habit, values_from = mean_weight) %>%
+  mutate(difference = `nonsmoker` - `smoker`) %>%
+  pull(difference)
+
+observed_diff
+```
 
 8.  Are the conditions necessary for conducting simulation based inference satisfied?
     Explain your reasoning.
