--- a/lab-12-inference-smoking.Rmd
+++ b/lab-12-inference-smoking.Rmd
@@ -300,6 +300,33 @@ p_value_smoke
 
 10. Construct a 95% confidence interval for the difference between the average weights of babies born to smoking and non-smoking mothers.
 
+```{r exercise-10-confidence-interval}
+set.seed(1234)
+
+# Generate bootstrap distribution for confidence interval
+boot_dist_smoke <- smoke_test_data %>%
+  specify(weight ~ habit) %>%
+  generate(reps = 5000, type = "bootstrap") %>%
+  calculate(stat = "diff in means", order = c("nonsmoker", "smoker"))
+
+# Calculate 95% confidence interval
+ci_smoke <- boot_dist_smoke %>%
+  get_ci(level = 0.95, type = "percentile")
+
+ci_smoke
+
+# Visualize the bootstrap distribution with CI
+boot_dist_smoke %>%
+  visualize() +
+  shade_ci(endpoints = ci_smoke, fill = "green", alpha = 0.3) +
+  labs(
+    title = "Bootstrap Distribution of Difference in Mean Baby Weight",
+    x = "Difference in Mean Weight (pounds): Nonsmoker - Smoker",
+    y = "Count"
+  ) +
+  theme_minimal()
+```
+
 ## Baby weight vs. mother's age
 
 In this portion of the analysis we focus on two variables.
