--- a/lab-12-inference-smoking.Rmd
+++ b/lab-12-inference-smoking.Rmd
@@ -89,6 +89,8 @@ dim(ncbirths)
 glimpse(ncbirths)
 ```
 
+**Answer:** The cases in this dataset are births recorded in North Carolina in 2004. Each row represents one birth with information about the baby's weight and characteristics, as well as the mother's demographics and habits. The sample contains `nrow(ncbirths)` births.
+
 The first step in the analysis of a new dataset is getting acquainted with the data.
 Make summaries of the variables in your dataset, determine which variables are categorical and which are numerical.
 For numerical variables, are there outliers?
