Adds summary statistics for birth weight analysis
Implements a summarization of birth weights to check for independence and skewness in the dataset.

This addition enhances the analysis by providing key statistics like mean, standard deviation, and range, which support the conditions for simulation-based inference.

--- a/lab-12-inference-smoking.Rmd
+++ b/lab-12-inference-smoking.Rmd
@@ -169,6 +169,17 @@ ncbirths_white %>%
     y = "Count"
   ) +
   theme_minimal()
+# Check for independence (births are independent events)
+# Check for skewness
+ncbirths_white %>%
+  summarise(
+    n = n(),
+    mean = mean(weight),
+    sd = sd(weight),
+    min = min(weight),
+    max = max(weight)
+  )
+```
 
 **Answer:** Yes, the conditions for simulation-based inference are satisfied:
 1. **Independence:** Each birth is an independent event (births are not related to each other).
