Adds interpretation of confidence interval for baby weights
Enhances analysis by providing a clear interpretation of the 95% confidence interval for the difference in average baby weights between non-smoking and smoking mothers.

Clarifies whether the confidence interval contains zero, indicating practical significance, and suggests the trend of non-smoking mothers having heavier babies.

Refines variable naming for clarity in subsequent analysis.

--- a/lab-12-inference-smoking.Rmd
+++ b/lab-12-inference-smoking.Rmd
@@ -405,10 +405,14 @@ boot_dist_smoke %>%
   theme_minimal()
 ```
 
+**Interpretation:** We are 95% confident that the true difference in average baby weight between non-smoking and smoking mothers is between `r round(ci_smoke[[1]], 3)` and `r round(ci_smoke[[2]], 3)` pounds. 
+
+Since the confidence interval `r ifelse((ci_smoke[[1]] > 0 | ci_smoke[[2]] < 0), "does not contain zero, this provides evidence that there is a meaningful difference in baby weights between the two groups.", "contains zero, this suggests that the difference might not be practically significant.")` The positive lower bound (if applicable) indicates that babies born to non-smoking mothers tend to weigh more on average.
+
 ## Baby weight vs. mother's age
 
 In this portion of the analysis we focus on two variables.
-The first one is `maturemom`.
+The first one is `mature`.
 
 11. First, a non-inference task: Determine the age cutoff for younger and mature mothers. Use a method of your choice, and explain how your method works.
 
