--- a/lab-12-inference-smoking.Rmd
+++ b/lab-12-inference-smoking.Rmd
@@ -454,6 +454,22 @@ age_stats
 
 For this analysis, we'll use **35 years as the age cutoff**, as this aligns with the obstetric definition of "mature mother" or "advanced maternal age." Mothers age 35 and older will be classified as mature, and mothers under 35 will be classified as younger. This cutoff is medically meaningful and commonly used in research.
 
+```{r verify-age-cutoff}
+# Create mature variable based on age 35
+ncbirths_with_mature <- ncbirths %>%
+  mutate(mature_cat = ifelse(mage >= 35, "mature", "younger"))
+
+# Verify the distribution
+ncbirths_with_mature %>%
+  group_by(mature_cat) %>%
+  summarise(
+    n = n(),
+    percentage = n / nrow(ncbirths_with_mature) * 100,
+    mean_age = mean(mage, na.rm = TRUE),
+    .groups = "drop"
+  )
+```
+
 The other variable of interest is `lowbirthweight`.
 
 12. Conduct a hypothesis test evaluating whether the proportion of low birth weight babies is higher for mature mothers. State the hypotheses, verify the conditions, run the test and calculate the p-value, and state your conclusion in context of the research question. Use $\alpha = 0.05$. If you find a significant difference, construct a confidence interval, at the equivalent level to the hypothesis test, for the difference between the proportions of low birth weight babies between mature and younger mothers, and interpret this interval in context of the data.
