--- a/lab-12-inference-smoking.Rmd
+++ b/lab-12-inference-smoking.Rmd
@@ -474,5 +474,94 @@ The other variable of interest is `lowbirthweight`.
 
 12. Conduct a hypothesis test evaluating whether the proportion of low birth weight babies is higher for mature mothers. State the hypotheses, verify the conditions, run the test and calculate the p-value, and state your conclusion in context of the research question. Use $\alpha = 0.05$. If you find a significant difference, construct a confidence interval, at the equivalent level to the hypothesis test, for the difference between the proportions of low birth weight babies between mature and younger mothers, and interpret this interval in context of the data.
 
+```{r exercise-12-proportion-test}
+set.seed(1234)
+
+# Create mature mother variable (age >= 35) and ensure lowbirthweight is available
+ncbirths_mature_data <- ncbirths %>%
+  filter(!is.na(mage) & !is.na(lowbirthweight)) %>%
+  mutate(mature = ifelse(mage >= 35, "mature", "younger")) %>%
+  select(mature, lowbirthweight)
+
+# Verify the data
+ncbirths_mature_data %>%
+  group_by(mature, lowbirthweight) %>%
+  summarise(count = n(), .groups = "drop")
+
+# Calculate proportions
+prop_data <- ncbirths_mature_data %>%
+  group_by(mature) %>%
+  summarise(
+    total = n(),
+    low_bw_count = sum(lowbirthweight == "low"),
+    proportion = mean(lowbirthweight == "low"),
+    .groups = "drop"
+  )
+
+prop_data
+
+# Observed difference in proportions
+obs_diff_prop <- prop_data %>%
+  arrange(desc(mature)) %>%
+  pull(proportion) %>%
+  diff()
+
+obs_diff_prop
+
+# Hypotheses:
+# H₀: The proportion of low birth weight babies is the same for mature and younger mothers (p_mature = p_younger)
+# H_A: The proportion of low birth weight babies is higher for mature mothers (p_mature > p_younger)
+
+# Generate null distribution (two-sided test using infer)
+null_dist_prop <- ncbirths_mature_data %>%
+  specify(lowbirthweight ~ mature, success = "low") %>%
+  hypothesize(null = "independence") %>%
+  generate(reps = 5000, type = "permute") %>%
+  calculate(stat = "diff in props", order = c("mature", "younger"))
+
+# Visualize
+null_dist_prop %>%
+  visualize() +
+  shade_p_value(obs_stat = obs_diff_prop, direction = "greater") +
+  labs(
+    title = "Null Distribution of Difference in Low Birth Weight Proportions",
+    x = "Difference in Proportions (Mature - Younger)",
+    y = "Count"
+  ) +
+  theme_minimal()
+
+# Calculate one-sided p-value
+p_value_prop <- null_dist_prop %>%
+  get_p_value(obs_stat = obs_diff_prop, direction = "greater")
+
+p_value_prop
+
+# Check conditions
+cat("Conditions for two-proportion hypothesis test:\n")
+cat("1. Random sampling/assignment: Assumed from data collection\n")
+cat("2. Sample sizes:\n")
+print(prop_data)
+cat("\nSuccess-failure condition:\n")
+print(prop_data %>%
+  mutate(
+    successes = low_bw_count,
+    failures = total - low_bw_count
+  ) %>%
+  select(mature, successes, failures))
+```
+
+**Hypotheses:**
+- H₀: The proportion of low birth weight babies is the same for mature and younger mothers (p_mature = p_younger)
+- H_A: The proportion of low birth weight babies is higher for mature mothers (p_mature > p_younger)
+
+**Conditions Verification:**
+1. **Independence:** Observations are independent (different babies from different mothers)
+2. **Sample Size:** Both groups have sufficient sample sizes
+3. **Success-Failure:** Both success and failure counts exceed 5 in each group
+
+**Conclusion:** The observed difference in proportions is `r round(obs_diff_prop, 4)`. The p-value is `r round(p_value_prop[[1]], 4)`. 
+
+`r if(p_value_prop[[1]] < 0.05) { "Since p < 0.05, we reject the null hypothesis. There is statistically significant evidence that the proportion of low birth weight babies is higher for mature mothers compared to younger mothers." } else { "Since p ≥ 0.05, we fail to reject the null hypothesis. We do not have sufficient evidence to conclude that mature mothers have a higher proportion of low birth weight babies." }`
+
 [^lab-12-inference-smoking-1]: Wen, Shi Wu, Michael S. Kramer, and Robert H. Usher.
     "Comparison of birth weight distributions between Chinese and Caucasian infants." American Journal of Epidemiology 141.12 (1995): 1177-1187.
