--- a/lab-12-inference-smoking.Rmd
+++ b/lab-12-inference-smoking.Rmd
@@ -563,5 +563,30 @@ print(prop_data %>%
 
 `r if(p_value_prop[[1]] < 0.05) { "Since p < 0.05, we reject the null hypothesis. There is statistically significant evidence that the proportion of low birth weight babies is higher for mature mothers compared to younger mothers." } else { "Since p ≥ 0.05, we fail to reject the null hypothesis. We do not have sufficient evidence to conclude that mature mothers have a higher proportion of low birth weight babies." }`
 
+```{r exercise-12-confidence-interval}
+# Construct 95% confidence interval for difference in proportions
+boot_dist_prop <- ncbirths_mature_data %>%
+  specify(lowbirthweight ~ mature, success = "low") %>%
+  generate(reps = 5000, type = "bootstrap") %>%
+  calculate(stat = "diff in props", order = c("mature", "younger"))
+
+# Get CI at equivalent level
+ci_prop <- boot_dist_prop %>%
+  get_ci(level = 0.95, type = "percentile")
+
+ci_prop
+
+# Visualize CI
+boot_dist_prop %>%
+  visualize() +
+  shade_ci(endpoints = ci_prop, fill = "green", alpha = 0.3) +
+  labs(
+    title = "Bootstrap Distribution: Difference in Low Birth Weight Proportions",
+    x = "Difference in Proportions (Mature - Younger)",
+    y = "Count"
+  ) +
+  theme_minimal()
+```
+
 [^lab-12-inference-smoking-1]: Wen, Shi Wu, Michael S. Kramer, and Robert H. Usher.
     "Comparison of birth weight distributions between Chinese and Caucasian infants." American Journal of Epidemiology 141.12 (1995): 1177-1187.
